# Discrete-Structures

./: README.md
Lab1/: CMakeLists.txt  Scanner.cpp  Scanner.h  Token.cpp  Token.h  checkfile.txt  lab1  main.cpp
Lab1/lab1.dSYM/Contents/Resources/DWARF/: lab1
Lab2/: CMakeLists.txt  DatalogProgram.cpp  DatalogProgram.h  Parameter.h  Parser.cpp  Parser.h  Predicate.cpp  Predicate.h  Rule.cpp  Rule.h  TokenList.txt  checkfile.txt  lab2  main.cpp  output.txt  testfile.txt
Lab2/lab2.dSYM/Contents/Resources/DWARF/: lab2
Lab3/: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Parser.cpp  Predicate.h  Relations.cpp  Relations.h  Scanner.h  Token.cpp  Tuple.cpp  lab2  lab3  main.cpp
Lab3/lab2.dSYM/Contents/Resources/DWARF/: lab2
Lab3/lab3.dSYM/Contents/Resources/DWARF/: lab3
Lab4/: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Parameter.cpp  Parser.h  Predicate.cpp  Relations.cpp  Relations.h  Rule.cpp  Rule.h  Scanner.cpp  Scheme.cpp  Scheme.h  Tuple.h  lab4
Lab4/lab4.dSYM/Contents/Resources/DWARF/: lab4
Lab5/: CMakeLists.txt  Database.cpp  Database.h  DatalogProgram.h  Graph.cpp  Graph.h  Node.cpp  Node.h  Parser.cpp  Rule.cpp  Rule.h  Token.h  lab5  main.cpp
Lab5/lab4.dSYM/Contents/Resources/DWARF/: lab4
Lab5/lab5.dSYM/Contents/Resources/DWARF/: lab5
